# grapes

./: AGENTS.md  README.md  config.toml  pyproject.toml
ecs_monitor/: config.py  main.py
ecs_monitor/aws/: client.py  fetcher.py  metrics.py
ecs_monitor/models/: __init__.py  cluster.py  service.py  task.py
ecs_monitor/ui/: app.py  cluster_view.py  console_link.py  debug_console.py  service_view.py  styles.css  task_view.py
grapes/: main.py
grapes/aws/: client.py  fetcher.py  metrics.py
grapes/models/: task.py
grapes/ui/: app.py  cluster_detail_view.py  cluster_list_view.py  cluster_view.py  debug_console.py  metrics_panel.py  styles.css  tree_view.py
grapes/utils/: ids.py
tests/: test_app.py  test_config.py  test_console_link.py  test_fetcher.py  test_ids.py  test_metrics.py  test_models.py  test_ui.py
