[project]
name = "ecs-monitor"
version = "0.1.0"
description = "Single pane TUI for monitoring AWS ECS cluster health"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "boto3>=1.34.0",
    "rich>=13.7.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
ecs-monitor = "ecs_monitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
